細かい修正

--- a/css/theme.css
+++ b/css/theme.css
@@ -5332,11 +5332,11 @@ a.badge:hover {
 .icon-sns {
   width: 32px;
   height: 32px;
-  background-image: url(https://dl.dropbox.com/u/9611165/fc2.themes/mini/img/icon-sns.png);
+  background-image: url(http://blog-imgs-56.fc2.com/f/c/2/fc2ist/icon-sns.png);
   background-repeat: no-repeat;
 }
 .icon-sns.icon-white {
-  background-image: url(https://dl.dropbox.com/u/9611165/fc2.themes/mini/img/icon-sns-white.png);
+  background-image: url(http://blog-imgs-56.fc2.com/f/c/2/fc2ist/icon-sns-white.png);
 }
 .icon-sns.twitter {
   background-position: 0 0;
