--- a/src/less/scaffolding.less
+++ b/src/less/scaffolding.less
@@ -511,11 +511,11 @@
 .icon-sns {
   width: 32px;
   height: 32px;
-  background-image: url(https://dl.dropbox.com/u/9611165/fc2.themes/mini/img/icon-sns.png);
+  background-image: url(http://blog-imgs-56.fc2.com/f/c/2/fc2ist/icon-sns.png);
   background-repeat: no-repeat;
   
   &.icon-white {
-    background-image: url(https://dl.dropbox.com/u/9611165/fc2.themes/mini/img/icon-sns-white.png);
+    background-image: url(http://blog-imgs-56.fc2.com/f/c/2/fc2ist/icon-sns-white.png);
   }
 
   &.twitter     { background-position: 0 0 }
