--- a/css/theme-doti-timeline.css
+++ b/css/theme-doti-timeline.css
@@ -19,7 +19,7 @@
   margin-left: -2px;
   width: 3px;
   height: 100%;
-  background-color: #d8d8d3;
+  background-color: #eee;
 }
 #cm .reaction .timeline article,
 #tb .reaction .timeline article {
@@ -28,7 +28,7 @@
   margin: 14px;
   padding: 10px 0;
   background-color: #fff;
-  border: 1px solid #d8d8d3;
+  border: 1px solid #eee;
   -webkit-border-radius: 6px;
   -moz-border-radius: 6px;
   border-radius: 6px;
