--- a/src/less/user.less
+++ b/src/less/user.less
@@ -7,6 +7,23 @@
 
 @import "bootstrap/variables.less";
 
+
+// Scaffolding
+// --------------------------------------------------
+
+body {
+  color: @textColor;
+  background-color: @bodyBackground;
+}
+
+a {
+  color: @linkColor;
+}
+a:hover {
+  color: @linkColorHover;
+}
+
+
 // Header
 // --------------------------------------------------
 
