--- a/css/user.css
+++ b/css/user.css
@@ -5,6 +5,21 @@
  */
 
 
+// Scaffolding
+// --------------------------------------------------
+
+body {
+  color: #555555;
+  background-color: #ffffff;
+}
+a {
+  color: #f89406;
+}
+a:hover {
+  color: #555555;
+}
+
+
 // Header
 // --------------------------------------------------
 
