--- a/css/theme.css
+++ b/css/theme.css
@@ -4803,6 +4803,9 @@ a.badge:hover {
   width: 880px;
 }
 @media (max-width: 767px) {
+  html {
+    overflow-x: hidden;
+  }
   .container {
     width: auto;
     padding: 0 10px;
