--- a/src/less/layout.less
+++ b/src/less/layout.less
@@ -32,6 +32,9 @@
 // --------------------------------------------------
 
 @media (max-width: 767px) {
+  html {
+    overflow-x: hidden;
+  }
   .container {
     width: auto;
     padding: 0 10px;
