--- a/src/less/bootstrap/pager.less
+++ b/src/less/bootstrap/pager.less
@@ -59,6 +59,6 @@
 .pager .disabled a,
 .pager .disabled a:hover {
   color: @gray;
-  background-color: #@grayLighter;
+  background-color: @grayLighter;
   cursor: default;
 }
