カラーピッカー, プラグイン, Cookie追加

--- a/src/less/bootstrap/variables.less
+++ b/src/less/bootstrap/variables.less
@@ -137,6 +137,13 @@
 @iconWhiteSpritePath:     "http://blog-imgs-56.fc2.com/f/c/2/fc2ist/glyphicons-halflings-white.png";
 
 
+// Colorpicker images path
+// -------------------------
+@colorPickerSaturationPath: "http://blog-imgs-56.fc2.com/f/c/2/fc2ist/saturation.png";
+@colorPickerHuePath:        "http://blog-imgs-56.fc2.com/f/c/2/fc2ist/hue.png";
+@colorPickerAlphaPath:      "http://blog-imgs-56.fc2.com/f/c/2/fc2ist/alpha.png";
+
+
 // Input placeholder text color
 // -------------------------
 @placeholderText:         @grayLight;
