--- a/src/less/article.less
+++ b/src/less/article.less
@@ -60,4 +60,10 @@
     margin-top: 16px;
     margin-bottom: 16px;
   }
+  
+  .nofloat {
+    margin-left: 0;
+    margin-right: 0;
+    float: none;
+  }
 }
