--- a/src/less/scaffolding.less
+++ b/src/less/scaffolding.less
@@ -527,3 +527,11 @@
   &.pinterest   { background-position: -192px 0 }
   &.github      { background-position: -225px 0 }
 }
+
+
+// Carousel
+// --------------------------------------------------
+
+.carousel a {
+  color: @white;
+}
